show details movie

--- a/client_app/pages/movie.html
+++ b/client_app/pages/movie.html
@@ -37,6 +37,23 @@
 </div>
 </body>
 <script>
-    eel.create_view_details_movie()
+
+    function loadMovie(stringHTML) {
+        document.getElementById("container").innerHTML = stringHTML;
+    }
+
+    eel.create_view_details_movie()(loadMovie);
+
+    function goToActor(id) {
+        // TODO
+        eel.change_index_movie(id);
+        window.location.href = "movie.html";
+    }
+
+    function goToDirector(id) {
+        // TODO
+        eel.change_index_movie(id);
+        window.location.href = "movie.html";
+    }
 </script>
 </html>
