--- a/client_app/pages/list_fims.html
+++ b/client_app/pages/list_fims.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen"/>
 </head>
 <body>
-<body>
 <div class="fixed-top my-nav">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Cinema</a>
@@ -46,11 +45,9 @@
     eel.create_view_list_movies()(loadMovies);
 
     function goToMovie(id) {
-        eel.change_index_movie(id)
+        eel.change_index_movie(id);
         window.location.href="movie.html";
     }
 
 </script>
-</html>
-</body>
 </html>
