--- a/client_app/pages/index.html
+++ b/client_app/pages/index.html
@@ -17,7 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Repertoire</a>
+        <a class="nav-link" href="repertoire.html">Repertoire</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="list_fims.html">Films</a>
