add confirmation page

--- a/client_app/pages/reservation.html
+++ b/client_app/pages/reservation.html
@@ -67,7 +67,7 @@
     }
 
     function goToConfirmation() {
-        window.location.href = "reservation.html";
+        window.location.href = "confirmation.html";
     }
 </script>
 </html>
