--- a/client_app/pages/login.html
+++ b/client_app/pages/login.html
@@ -17,7 +17,6 @@
 <body>
 <div class="fixed-top my-nav">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Cinema</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -94,7 +93,7 @@
         if (response == "Error") {
             document.getElementById("wrong").hidden = false;
         } else {
-            window.location.href = "index.html";
+            window.location.href = "repertoire.html";
         }
     }
 </script>
