jakies stare zmiany

--- a/client_app/pages/account.html
+++ b/client_app/pages/account.html
@@ -131,21 +131,21 @@
         }
     }
 
-    function update() {
-        eel.update_user(document.getElementById("login").value,
+    async function update() {
+        await eel.update_user(document.getElementById("login").value,
             document.getElementById("password").value,
             document.getElementById("number-phone").value,
-            document.getElementById("email").value);
+            document.getElementById("email").value)();
         window.location.href = "account.html";
     }
 
-    function edit(id, screeningId) {
-        eel.change_index_reservation(id, screeningId);
+    async function edit(id, screeningId) {
+        await eel.change_index_reservation(id, screeningId)();
         window.location.href = "reservation.html";
     }
 
-    function remove(id) {
-        eel.remove_reservation(id);
+    async function remove(id) {
+        await eel.remove_reservation(id)();
         window.location.href = "account.html";
     }
 
