--- a/client_app/pages/movie.html
+++ b/client_app/pages/movie.html
@@ -41,7 +41,7 @@
 </body>
 <script>
 
-    function check(response) {
+    async function check(response) {
         if (response == "Empty") {
             window.location.href = "login.html";
         } else {
