--- a/client_app/pages/list_fims.html
+++ b/client_app/pages/list_fims.html
@@ -57,8 +57,8 @@
 
     eel.create_view_list_movies()(loadMovies);
 
-    function goToMovie(id) {
-        eel.change_index_movie(id);
+    async function goToMovie(id) {
+        await eel.change_index_movie(id)();
         window.location.href = "movie.html";
     }
 
