--- a/client_app/pages/reservation.html
+++ b/client_app/pages/reservation.html
@@ -86,18 +86,18 @@
 
     eel.create_view_reservation()(loadSeats);
 
-    function reservate(id) {
+    async function reservate(id) {
         document.getElementById("seat-reserved").hidden = true;
         var seat = document.getElementById(id);
         if (seat.style.backgroundColor == "white") {
             seat.style.backgroundColor = "blue";
             seat.style.color = "white";
-            eel.add_index_seats(id);
+            await eel.add_index_seats(id)();
             numberSeats++;
         } else if (seat.style.backgroundColor == "blue") {
             seat.style.backgroundColor = "white";
             seat.style.color = "black";
-            eel.remove_index_seats(id);
+            await eel.remove_index_seats(id)();
             numberSeats--;
         } else {
             document.getElementById("seat-reserved").hidden = false;
@@ -109,8 +109,8 @@
         }
     }
 
-    function goToConfirmation() {
-        eel.reserve();
+    async function goToConfirmation() {
+        await eel.reserve()();
         window.location.href = "confirmation.html";
     }
 </script>
